# lemon-project-template

./: .gitignore  .gitmodules  CMakeLists.txt  LEMONConfig.cmake  README  README.md
cmake/: LEMONConfig.cmake
src/: CMakeLists.txt  main.cc
